--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,opencv
 .idea/runs
 .idea/execute.ipynb
+.idea
